--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10rem;
+}
+
+.header {
+  margin-top: 2.5%;
+}
+
 main {
   display: grid;
   grid-template-columns: repeat(3, 6.25rem);
