--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap");
+
+:root {
+  font-family: "Raleway", sans-serif;
+}
+
 body {
   display: flex;
   flex-direction: column;
